--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^44.1.0",
         "@ckeditor/ckeditor5-vue": "^7.3.0",
+        "sortablejs": "^1.15.6",
+        "sortablejs-vue3": "^1.2.11",
         "vue": "^3.5.13",
         "vue-loader": "^17.4.2",
-        "vue-router": "^4.5.0"
+        "vue-router": "^4.5.0",
+        "vuedraggable": "^4.1.0"
     }
 }
