--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,14 +2,15 @@ version: '3.8'
 
 services:
   nuxt-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=development
-    restart: unless-stopped
     volumes:
       - .:/app
-      - /app/node_modules
+      - nuxt_node_modules:/app/node_modules
+    restart: unless-stopped
+
+volumes:
+  nuxt_node_modules:
