--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
     "nuxt": "^3.17.4",
+    "pusher-js": "^8.4.0",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1"
   }
