--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "axios": "^1.9.0",
     "nuxt": "^3.17.4",
     "pusher-js": "^8.4.0",
     "vue": "^3.5.14",
