--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "aos": "^2.3.4",
     "axios": "^1.9.0",
     "nuxt": "^3.17.4",
     "pusher-js": "^8.4.0",
+    "swiper": "^11.2.8",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1"
   }
