--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "@pinia/nuxt": "^0.11.1",
     "aos": "^2.3.4",
     "nuxt": "^3.17.4",
+    "pinia": "^3.0.3",
     "pusher-js": "^8.4.0",
     "swiper": "^11.2.8",
     "vue": "^3.5.14",
