--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.5.0",
     "nuxt": "^3.17.4",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "pusher-js": "^8.4.0",
     "swiper": "^11.2.8",
     "vue": "^3.5.14",
